Add about & bulletin pages

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "http://hugo.jacobtmurphy.me/"
+staticDir = ['static']
 languageCode = "en-us"
 title = "Example Parish"
 theme = "alpha-church"
