Set up Github Pages compatibility

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://hugo.jacobtmurphy.me/"
+baseURL = "http://jacobtmurph.github.io/example-parish/"
 staticDir = ['static']
 languageCode = "en-us"
 title = "Example Parish"
