Fix url matching problem

--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ enableInlineShortcodes = true
     #lge = "example96.png"
 
   [params.banner]
-    image = "img/backup.jpg"
+    image = "example-parish/img/backup.jpg"
 
 #  [params.style]
 #    googleFonts = ["Cardo", "Crimson+Text", "Merriweather", "Playfair+Display:400,700", "Roboto+Slab"]
